--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,6 +12,7 @@
 @import '_short-item';
 @import '_footer';
 @import '_category';
+@import '_category-aside';
 @import '_short-item-cart';
 @import '_cart-page';
 @import '_full-item';
